--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "id": "b55411b9",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "da9e5e94",
    "metadata": {},
    "outputs": [],
@@ -201,13 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# hjelpe fuksjon for vurdering av modellene        \n",
     "def evaluate_model(classifier, features, targets):\n",
     "    predictions = classifier.predict(features)\n",
@@ -248,7 +246,7 @@
     "    train_accuracy, train_precision, train_recall, train_f1, train_roc_auc = [], [], [], [], []\n",
     "    validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc = [], [], [], [], []\n",
     "\n",
-    "    for i in range(0, 10, 1):\n",
+    "    for i in range(0, 20, 1):\n",
     "        dataset = create_full_dataset(df)\n",
     "        classifier.fit(dataset[0][1], dataset[0][0])\n",
     "    \n",
@@ -267,7 +265,7 @@
     "def test(classifier):\n",
     "    accuracy, precision, recall, f1, roc_auc = [], [], [], [], []\n",
     "\n",
-    "    for i in range(0, 10, 1):\n",
+    "    for i in range(0, 20, 1):\n",
     "        dataset = create_full_dataset(df)\n",
     "        classifier.fit(dataset[0][1], dataset[0][0])\n",
     "\n",
@@ -286,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 47,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -301,17 +299,17 @@
       "F1: 1.00\n",
       "ROCAUC: 1.00\n",
       "Validation results:\n",
-      "Accuracy: 0.93\n",
-      "Precision: 0.91\n",
-      "Recall: 0.91\n",
-      "F1: 0.91\n",
-      "ROCAUC: 0.93\n",
+      "Accuracy: 0.92\n",
+      "Precision: 0.90\n",
+      "Recall: 0.90\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.92\n",
       "Test results:\n",
-      "Accuracy: 0.93 +- 0.02\n",
-      "Precision: 0.90 +- 0.04\n",
-      "Recall: 0.92 +- 0.04\n",
-      "F1: 0.91 +- 0.02\n",
-      "ROCAUC: 0.93 +- 0.02\n"
+      "Accuracy: 0.92 +- 0.03\n",
+      "Precision: 0.91 +- 0.04\n",
+      "Recall: 0.88 +- 0.05\n",
+      "F1: 0.90 +- 0.04\n",
+      "ROCAUC: 0.92 +- 0.03\n"
      ]
     }
    ],
@@ -321,6 +319,170 @@
     "validate(dt1)\n",
     "test(dt1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "c3433440",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.95\n",
+      "Precision: 0.96\n",
+      "Recall: 0.90\n",
+      "F1: 0.93\n",
+      "ROCAUC: 0.94\n",
+      "Validation results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.94\n",
+      "Recall: 0.88\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.92\n",
+      "Test results:\n",
+      "Accuracy: 0.94 +- 0.02\n",
+      "Precision: 0.93 +- 0.02\n",
+      "Recall: 0.90 +- 0.06\n",
+      "F1: 0.91 +- 0.03\n",
+      "ROCAUC: 0.93 +- 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb1 = GaussianNB(var_smoothing=1e-9)\n",
+    "validate(nb1)\n",
+    "test(nb1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3658d3a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.96\n",
+      "Recall: 0.87\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.92\n",
+      "Validation results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.95\n",
+      "Recall: 0.85\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb1 = GaussianNB(var_smoothing=1e-8)\n",
+    "validate(nb1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f8328f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.97\n",
+      "Recall: 0.84\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.91\n",
+      "Validation results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.97\n",
+      "Recall: 0.84\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb1 = GaussianNB(var_smoothing=1e-7)\n",
+    "validate(nb1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "91fed950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.94\n",
+      "Recall: 0.89\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.93\n",
+      "Validation results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.93\n",
+      "Recall: 0.89\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb1 = GaussianNB(var_smoothing=1e-10)\n",
+    "validate(nb1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "88dc8fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.94\n",
+      "Recall: 0.90\n",
+      "F1: 0.92\n",
+      "ROCAUC: 0.93\n",
+      "Validation results:\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.91\n",
+      "Recall: 0.90\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.92\n",
+      "Test results:\n",
+      "Accuracy: 0.93 +- 0.03\n",
+      "Precision: 0.91 +- 0.05\n",
+      "Recall: 0.89 +- 0.05\n",
+      "F1: 0.90 +- 0.04\n",
+      "ROCAUC: 0.92 +- 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb1 = GaussianNB(var_smoothing=1e-14)\n",
+    "validate(nb1)\n",
+    "test(nb1)"
    ]
   }
  ],
