--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -496,6 +496,7 @@
    "id": "655f4e24",
    "metadata": {},
    "source": [
+    "NEVN STRATEFIDE SAMPLING PÅ TARGET GRUPPE FOR JEVN FORDELING AV TARGET VERDIER\n",
     "I seksjonen over så ligger kode for alle fuksjonene som brukes til å splitte opp datasettet.\n",
     "Jeg har valgt å bruke en 60, 20, 20 % split, slik at jeg får en god fordeling mellom dataene for trening, validering og testing. Ut ifra størelsen på dette datasette mener jeg dette gir en grei balanse mellom nok data til trening av moddelen, men samtidig en god mengde data til opptimalisering og testing av moddelen. Hvis datasetet hadde vært av betydelig mindre størelse kunne det vært lurt å tildele en større andel av det totale datasetet til trening av modellen for å få en moddel som kan høyde for en større spredning av tilfeller."
    ]
@@ -620,6 +621,9 @@
     "\n",
     "dt1 = DecisionTreeClassifier()\n",
     "validate(dt1, 20)\n",
+    "\n",
+    "\n",
+    "#DecisionTreeClassifier(max_depth=7, min_samples_split=5, min_samples_leaf=2, min_weight_fraction_leaf=0.05, max_leaf_nodes=12, class_weight='balanced')\n",
     "\n"
    ]
   },
