--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -624,7 +624,7 @@
     "\n",
     "\n",
     "#DecisionTreeClassifier(max_depth=7, min_samples_split=5, min_samples_leaf=2, min_weight_fraction_leaf=0.05, max_leaf_nodes=12, class_weight='balanced')\n",
-    "\n"
+    "#ccp_alpha=0.015\n"
    ]
   },
   {
