--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -628,6 +628,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b691d01",
+   "metadata": {},
+   "source": [
+    "ref ccp_alpha: https://scikit-learn.org/stable/auto_examples/tree/plot_cost_complexity_pruning.html#sphx-glr-auto-examples-tree-plot-cost-complexity-pruning-py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3433440",
