--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "cd6945e6",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b55411b9",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "da9e5e94",
    "metadata": {},
    "outputs": [],
@@ -496,14 +496,12 @@
    "id": "655f4e24",
    "metadata": {},
    "source": [
-    "NEVN STRATEFIDE SAMPLING PÅ TARGET GRUPPE FOR JEVN FORDELING AV TARGET VERDIER\n",
-    "I seksjonen over så ligger kode for alle fuksjonene som brukes til å splitte opp datasettet.\n",
-    "Jeg har valgt å bruke en 60, 20, 20 % split, slik at jeg får en god fordeling mellom dataene for trening, validering og testing. Ut ifra størelsen på dette datasette mener jeg dette gir en grei balanse mellom nok data til trening av moddelen, men samtidig en god mengde data til opptimalisering og testing av moddelen. Hvis datasetet hadde vært av betydelig mindre størelse kunne det vært lurt å tildele en større andel av det totale datasetet til trening av modellen for å få en moddel som kan høyde for en større spredning av tilfeller."
+    "Jeg har valgt å bruke stratified sampling med grupering på target kollonen slik at det oppnås en tilnærmet lik fordeling for utfallet av target hendelsen mellom de forskjellige delene av datasetet. Videre har jeg delt opp datasetet i 60, 20, 20 % split for henholdsvis training, validation og testing, slik at jeg får en god fordeling mellom dataene for trening, validering og testing. Ut ifra størelsen på dette datasette mener jeg dette gir en grei balanse mellom nok data til trening av moddelen, men samtidig en god mengde data til opptimalisering og testing av moddelen. Hvis datasetet hadde vært av betydelig mindre størelse kunne det vært lurt å tildele en større andel av det totale datasetet til trening av modellen for å få en moddel som kan høyde for en større spredning av tilfeller."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -543,10 +541,12 @@
     "    print(f'F1: {np.mean(f1):.2f} +- {np.std(f1):.2f}')\n",
     "    print(f'ROCAUC: {np.mean(roc_auc):.2f} +- {np.std(roc_auc):.2f}')\n",
     "\n",
-    "# funksjon for å validere modellene og hyperparameter tuningen\n",
+    "# funksjon for å trening og hyperparameter tuning av modellen med mulighet for valg av antall kjøring med intern looping i fuksjonen.\n",
     "def validate(classifier, runs):    \n",
     "    train_accuracy, train_precision, train_recall, train_f1, train_roc_auc = [], [], [], [], []\n",
     "    validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc = [], [], [], [], []\n",
+    "\n",
+    "    if(runs < 1): runs = 1\n",
     "\n",
     "    for i in range(0, runs, 1):\n",
     "        dataset = create_full_dataset(df)\n",
@@ -563,9 +563,11 @@
     "    print('Validation results:')\n",
     "    results_print(validate_accuracy, validate_precision, validate_recall, validate_f1, validate_roc_auc)\n",
     "\n",
-    "# funksjon for endelig testing av modellene og hyperparameter tuningen\n",
+    "# funksjon for endelig testing av modellene og hyperparameter tuningen med mulighet for valg av antall kjøring med intern looping i fuksjonen.\n",
     "def test(classifier, runs):\n",
     "    accuracy, precision, recall, f1, roc_auc = [], [], [], [], []\n",
+    "\n",
+    "    if(runs < 1): runs = 1\n",
     "\n",
     "    for i in range(0, runs, 1):\n",
     "        dataset = create_full_dataset(df)\n",
@@ -583,12 +585,12 @@
    "id": "a2861fa2",
    "metadata": {},
    "source": [
-    "Kort kommentar om funksjoner for trening og testing"
+    "For funksjonene jeg har laget for trening, tuning og testing av modellen så har jeg valgt å legg inn løkker, slik at validering og testing kan kjøres flere gang med ny oppdeling av datasetet hver gang disse løkkene starter på en ny loop. Dette er gjort for å oppnå mindre variasjon i resultatene ved både validering av tuningen, samt testing av slutt resultatet slik at disse har større grad av pålitelighet. Jeg har også lagt inn mulighet for å velg antall ganger løkkene skal kjøres."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "74c20907",
    "metadata": {},
    "outputs": [
@@ -603,17 +605,11 @@
       "F1: 1.00\n",
       "ROCAUC: 1.00\n",
       "Validation results:\n",
-      "Accuracy: 0.93\n",
-      "Precision: 0.90\n",
-      "Recall: 0.91\n",
-      "F1: 0.90\n",
-      "ROCAUC: 0.92\n",
-      "Test results:\n",
-      "Accuracy: 0.93 +- 0.02\n",
-      "Precision: 0.91 +- 0.05\n",
-      "Recall: 0.91 +- 0.05\n",
-      "F1: 0.91 +- 0.03\n",
-      "ROCAUC: 0.93 +- 0.02\n"
+      "Accuracy: 0.92\n",
+      "Precision: 0.89\n",
+      "Recall: 0.88\n",
+      "F1: 0.89\n",
+      "ROCAUC: 0.91\n"
      ]
     }
    ],
@@ -637,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c3433440",
    "metadata": {},
    "outputs": [
@@ -653,16 +649,10 @@
       "ROCAUC: 0.93\n",
       "Validation results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.95\n",
-      "Recall: 0.89\n",
-      "F1: 0.92\n",
-      "ROCAUC: 0.93\n",
-      "Test results:\n",
-      "Accuracy: 0.95 +- 0.03\n",
-      "Precision: 0.95 +- 0.03\n",
-      "Recall: 0.90 +- 0.05\n",
-      "F1: 0.92 +- 0.04\n",
-      "ROCAUC: 0.94 +- 0.03\n"
+      "Precision: 0.93\n",
+      "Recall: 0.90\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.93\n"
      ]
     }
    ],
@@ -673,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3658d3a4",
    "metadata": {},
    "outputs": [
@@ -682,17 +672,17 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Accuracy: 0.94\n",
-      "Precision: 0.96\n",
+      "Accuracy: 0.93\n",
+      "Precision: 0.95\n",
       "Recall: 0.87\n",
       "F1: 0.91\n",
       "ROCAUC: 0.92\n",
       "Validation results:\n",
-      "Accuracy: 0.94\n",
+      "Accuracy: 0.93\n",
       "Precision: 0.96\n",
-      "Recall: 0.87\n",
-      "F1: 0.91\n",
-      "ROCAUC: 0.93\n"
+      "Recall: 0.85\n",
+      "F1: 0.90\n",
+      "ROCAUC: 0.92\n"
      ]
     }
    ],
@@ -703,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f8328f8f",
    "metadata": {},
    "outputs": [
@@ -714,15 +704,15 @@
       "Training results:\n",
       "Accuracy: 0.93\n",
       "Precision: 0.97\n",
-      "Recall: 0.83\n",
+      "Recall: 0.84\n",
       "F1: 0.90\n",
       "ROCAUC: 0.91\n",
       "Validation results:\n",
-      "Accuracy: 0.94\n",
+      "Accuracy: 0.93\n",
       "Precision: 0.97\n",
-      "Recall: 0.86\n",
-      "F1: 0.91\n",
-      "ROCAUC: 0.92\n"
+      "Recall: 0.83\n",
+      "F1: 0.89\n",
+      "ROCAUC: 0.91\n"
      ]
     }
    ],
@@ -733,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "91fed950",
    "metadata": {},
    "outputs": [
@@ -749,8 +739,8 @@
       "ROCAUC: 0.93\n",
       "Validation results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.92\n",
-      "Recall: 0.91\n",
+      "Precision: 0.93\n",
+      "Recall: 0.90\n",
       "F1: 0.91\n",
       "ROCAUC: 0.93\n"
      ]
@@ -763,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "88dc8fca",
    "metadata": {},
    "outputs": [
@@ -773,22 +763,16 @@
      "text": [
       "Training results:\n",
       "Accuracy: 0.94\n",
-      "Precision: 0.94\n",
-      "Recall: 0.90\n",
-      "F1: 0.92\n",
-      "ROCAUC: 0.94\n",
-      "Validation results:\n",
-      "Accuracy: 0.93\n",
-      "Precision: 0.92\n",
+      "Precision: 0.93\n",
       "Recall: 0.90\n",
       "F1: 0.91\n",
       "ROCAUC: 0.93\n",
-      "Test results:\n",
-      "Accuracy: 0.93 +- 0.03\n",
-      "Precision: 0.93 +- 0.05\n",
-      "Recall: 0.89 +- 0.04\n",
-      "F1: 0.91 +- 0.04\n",
-      "ROCAUC: 0.93 +- 0.03\n"
+      "Validation results:\n",
+      "Accuracy: 0.94\n",
+      "Precision: 0.92\n",
+      "Recall: 0.91\n",
+      "F1: 0.91\n",
+      "ROCAUC: 0.93\n"
      ]
     }
    ],
@@ -814,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
